# tactus

./: .codecov.yml  .flakeheaven.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CY46h1_HARMONIE_AROME_airquality_DEMO_60x80_2500m_20230916.def  CY48t3_AROME_airquality_DEMO_60x80_2500m_20230916.def  CY48t3_AROME_nwp_DEMO_60x80_2500m_20230916.def  CY48t3_AROME_nwp_DEMO_60x80_2500m_20240916.toml  Clean  Creategrib.job  Creategrib.job.jid  Creategrib.job.orig  Deode-Prototype.code-workspace  FirstGuess.job  FirstGuess.job.jid  FirstGuess.job.orig  Generate_namelists  LUMI.md  README.md  Start  background.json  config.yml  conftest.py  cy46h1_aq_3patch.toml  cy46h1_gribfix.toml  cy46h1_harmonie_arome.toml  cy46h1_harmonie_arome_aq.toml  cy48t3_albedo.toml  cy48t3_arome.toml  cy48t3_arome_aq.toml  cy48t3_arome_w_surfex.toml  cy48t3_gribfix.toml  cy48t3_harmonie_arome_aq.toml  deode_case.def  dev_tests  ecflow-gen.json  forecast.json  hpc-login.json  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  documentation.yaml  linting.yaml  reuseable-workflow-atos.yaml  reuseable-workflow-lumi.yaml  test.yaml  tests.yaml
config/: config.toml  config_forecast.toml
deode/: __init__.py  __main__.py  archive.py  argparse_wrapper.py  aux_types.py  boundary_utils.py  cleaning.py  commands_functions.py  config_doc.py  config_parser.py  custom_validators.py  datetime_utils.py  derived_variables.py  discover_task.py  experiment.py  fullpos.py  general_utils.py  geo_utils.py  host_actions.py  initial_conditions.py  logs.py  main.py  mars_utils.py  namelist.py  os_utils.py  plugin.py  scheduler.py  sqlite_utils.py  submission.py  suites.py  toml_formatter.py  toolbox.py
deode/config_file_schemas/: main_config_schema.json
deode/data/config_file_schemas/: main_config_schema.json
deode/data/config_files/: config.toml  config_CY46h1.toml  config_CY46h1_target.toml  config_CY46t1.toml  config_CY48t3.toml  config_CY48t3_ALARO.toml  config_CY48t3_Alaro.toml  config_CY48t3_alaro.toml  config_CY48t3_lumi.toml  config_CY48t3_lumi_ALARO.toml  config_CY48t3_lumi_ALARO_gpu.toml  config_CY48t3_lumi_ALARO_gpu_large.toml  config_CY48t3_lumi_ALARO_large.toml  config_CY48t3_target.toml  config_CY49t1.toml  config_CY49t2_ALARO.toml  config_CY49t2_leonardo_ALARO.toml  config_forecast.toml  known_hosts.yml  troika.yml
deode/data/eccodes/: faModelName.source  (+1 more)
deode/eps/: custom_generators.py  eps_setup.py
deode/namelist_generation_input/: assemble_master.yml  assemble_surfex.yml  convert_namelist.py  master_namelists.yml  surfex_namelists.yml
deode/suites/: base.py  clean_old_data.py  deode.py  deode_suite_components.py  discover_suite.py  suite_utils.py
deode/tasks/: __init__.py  archive.py  base.py  batch.py  boundaries.py  c903.py  canari.py  clean_old_data.py  cleaning.py  cleaning_tasks.py  collectlogs.py  creategrib.py  data.py  discover_task.py  e923.py  e923_update.py  e927.py  extractsqlite.py  forecast.py  gmtedsoil.py  gribmodify.py  impacts.py  interpolsstsic.py  iomerge.py  marsprep.py  marsprepGlobalDT.py  prep_run.py  serial.py  sfx.py  sqlite.py  toposoil.py
deode/templates/: __init__.py  stand_alone.py
docs/: basics_adding_new_task.md  conf.py  config.md  copying_moving_config_example.toml  development_guide.md  fullpos.md  index.rst  minimal_config_example.toml  misc_section_in_doc_page.rst  namelists.md  parsed_config_class_docs.ipynb  pgd_config_example.toml  task_config_example.toml
docs/figs/: git_branch_structure.drawio  git_branch_structure_legacy_support.drawio
docs/markdown_docs/: basics_adding_new_task.md  case_config.md  cleaning_readme.md  development_guide.md  e923_update.md  environment_variables.md  eps_config.md  fdb.md  impact_models.md  local_installation.md  lumi.md  namelists.md  plugins.md  tasks.md  troubleshooting.md
ecf/: default.py  stand_alone.py
nam/: OPTIONS.nam_PGD  OPTIONS.nam_PREP  fort.4_arome  fort.4_e927  nam0  nam923_1  nam923_1_smoothing  nam923_2  nam923_3  nam923_4  nam923_5  nam923_6  nam923_8  nam923_9  xxt00000000  xxtddddhhmm
tactus/: __init__.py  __main__.py  argparse_wrapper.py  boundary_utils.py  cleaning.py  commands_functions.py  config_parser.py  csc_actions.py  custom_validators.py  derived_variables.py  domain_utils.py  experiment.py  formatters.py  general_utils.py  host_actions.py  initial_conditions.py  logs.py  mars_utils.py  namelist.py  os_utils.py  plugin.py  scheduler.py  submission.py  toolbox.py
tactus/eps/: custom_generators.py
tactus/suites/: base.py  clean_old_data.py  deode.py  deode_suite_components.py  discover_suite.py  suite_utils.py  tactus.py  tactus_suite_components.py
tactus/tasks/: archive.py  base.py  batch.py  boundaries.py  clean_old_data.py  cleaning_tasks.py  collectlogs.py  discover_task.py  e923.py  e923_update.py  forecast.py  generatewfptabfile.py  gribmodify.py  impacts.py  interpolsstsic.py  iomerge.py  marsprep.py  prep_run.py  serial.py  sfx.py  toposoil.py
tactus/templates/: stand_alone.py
test_worfklow_scripts/: export_case_variables.py  get_suite_status.py
tests/: conftest.py
tests/integration/: test_experiment.py  test_integration_experiment.py
tests/smoke/: test_main.py
tests/unit/: test_archive.py  test_base_task.py  test_binary_input_data.py  test_case_setup.py  test_clean_old_data.py  test_cleaning.py  test_commands_functions.py  test_config_parser.py  test_constants.py  test_create_famodeldefs.py  test_creategrib.py  test_custom_validators.py  test_datetime_utils.py  test_derived_variables.py  test_destine_fa_model_source.py  test_eccodes_def.py  test_eps_setup.py  test_experiment.py  test_extractsqlite.py  test_file_manager.py  test_fileconv.py  test_formatters.py  test_fullpos.py  test_general_utils.py  test_geo_utils.py  test_host_actions.py  test_impact.py  test_initial_conditions.py  test_logger.py  test_mars_utils.py  test_marsprep.py  test_namelist_generation.py  test_os_utils.py  test_plugin.py  test_scheduler.py  test_sqlite.py  test_standalone_template.py  test_submission.py  test_suite.py  test_tasks.py  (+2 more)
(+558 files in other folders)
