[tool.poetry]
    name = "deode"
    version = "0.1.0"
    description = "Prototype for the DEODE scripting system."
    authors = ["Paulo V. C. Medeiros <paulo.medeiros@smhi.se>"]
    license = "MIT"
    readme = "README.md"
    repository = "https://source.coderefinery.org/deode/deode-prototype"
    documentation = "https://source.coderefinery.org/deode/deode-prototype/-/wikis"

[tool.poetry.scripts]
    deode = "deode.main:main"

[build-system]
    build-backend = "poetry.core.masonry.api"
    requires = ["poetry-core >= 1.0.0"]

[tool.poetry.dependencies]
    python = "^3.8"
    attrs = "^21.4.0"
    dateutils = "^0.6.12"
    humanize = "^3.14.0"
    numexpr = "^2.8.4"
    numpy = "^1.22.4"
    pandas = "^1.4.0"
    pydantic = "^1.9.0"
    pyproj = "^3.3.0"
    tomlkit = "^0.8.0"
    troika = {git = "https://git.ecmwf.int/scm/ecsdk/troika.git"}

[tool.poetry.dev-dependencies]
    black = "^22.1.0"
    flake8 = "^4.0.1"
    flakeheaven = "^0.11.1"
    isort = "^5.10.1"
    poetryup = "^0.5.4"
    pre-commit = "^2.17.0"
    pyment = "0.3.3"
    pylint = "^2.12.2"
    pytest = "^7.0.0"
    pytest-dependency = "^0.5.1"
    pytest-mock = "^3.7.0"
    pytest-profiling = "^1.7.0"
    pytest-timeout = "^2.1.0"
    pytest-cov = "^3.0.0"
    # flake8 plugins
    darglint = "^1.8.1"
    flake8-bandit = "^3.0.0"
    flake8-bugbear = "^22.1.11"
    flake8-builtins = "^1.5.3"
    flake8-comprehensions = "^3.8.0"
    flake8-docstrings = "^1.6.0"
    flake8-eradicate = "^1.2.0"
    flake8-logging-format = "^0.6.0"
    flake8-mutable = "^1.2.0"
    flake8-pytest-style = "^1.6.0"
    mccabe = "^0.6.1"
    pep8-naming = "^0.12.1"

[tool.pytest.ini_options]
    testpaths = ["tests/unit", "tests/smoke"]
    addopts = "-v"
    log_cli_level = "INFO"

[tool.black]
    line-length = 90

[tool.isort]
    profile = "black"
    line_length = 90

[tool.pylint.MASTER]
    # See <https://github.com/PyCQA/pylint/blob/master/pylint/extensions/docparams.py>
    load-plugins = "pylint.extensions.docparams"

[tool.pylint.BASIC]
    # We'll use pylint separate from flakheaven. Some pylint options don't seem to be
    # respected when using it via flakeheaven (e.g., fail-under).
    # For a description of the config opts used here, see:
    # <https://docs.pylint.org/en/1.6.0/options.html>
    # <https://docs.pylint.org/en/1.6.0/features.html>
    # <https://docs.pylint.org/en/1.6.0/faq.html>
    # Also, run "pylint --generate-rcfile" to see all applied pylint opts.
    fail-under = "8.0"
    good-names = ["i", "j", "n", "x", "y", "df", "db", "dt", "g0"]
    # Default value for the rgx below: "[a-z_][a-z0-9_]{2,30}$"
    attr-rgx = "[a-z_][a-z0-9_]{1,30}$"

[tool.pylint.messages_control]
    # Disable C0116 (Missing function or method docstring). Leave it to flake8-docstrings
    # Disable C0326 and C0330 to avoid clashing with black
    # Disable C0301 (Line too long). Leave it for black to control.
    # See <https://black.readthedocs.io/en/stable/compatible_configs.html#pylint>
    # Disable E0402 due to false positives <https://github.com/flycheck/flycheck/issues/1758>
    disable = "C0116, C0301, C0326, C0330, E0402"
    # Fix "no-name-in-module" error when linting pydantic-based code.
    # See <https://github.com/samuelcolvin/pydantic/issues/1961>
    extension-pkg-whitelist = "pydantic"

[tool.pylint.format]
    # Set max-line-length compatible with black
    max-line-length = "90"

[tool.flakeheaven]
    base = ".flakeheaven.toml"
