[tool.poetry]
  # Package ID info
  description = "Prototype for the DEODE scripting system."
  name = "deode"
  version = "0.1.0"
  # Other package info
  authors = ["The WP5.1 development group in the DE_330 project."]
  documentation = "https://destination-earth-digital-twins.github.io/deode-prototype-docs"
  license = "MIT"
  readme = "README.md"
  repository = "https://github.com/destination-earth-digital-twins/Deode-Prototype"

[tool.poetry.scripts]
  deode = "deode.__main__:main"

[build-system]
  build-backend = "poetry.core.masonry.api"
  requires = ["poetry-core >= 1.0.0"]

[tool.poetry.dependencies]
  # Python version
  python = "^3.8"
  # General dependencies
  dateutils = "^0.6.12"
  f90nml = "^1.4.3"
  fastjsonschema = "2.16.2"
  humanize = "^4.8.0"
  json-schema-for-humans = {git = "https://github.com/paulovcmedeiros/json-schema-for-humans.git", branch = "feature/choose-properties-table-columns"}
  jsonref = "^1.1.0"
  loguru = "^0.7.1"
  numexpr = "^2.8.4"
  numpy = "^1.22.4"
  pandas = "^1.4.0"
  pyproj = "^3.3.0, !=3.5.0"
  pyyaml = "^6.0"
  tomli = "^2.0.1"
  tomlkit = "^0.12.1"
  troika = {git = "https://git.ecmwf.int/scm/ecsdk/troika.git"}

[tool.poetry.group.dev.dependencies]
  ipython = "^8.12.3"
  jupyterlab = "^3.6.1"
  nb-clean = "^2.4.0"
  pre-commit = "^3.0.4"

[tool.poetry.group.doc.dependencies]
  myst-parser = "^1.0.0"
  sphinx = "^6.2.1"
  sphinx-rtd-theme = "^1.2.1"

[tool.poetry.group.linting.dependencies]
  black = {extras = ["jupyter"], version = "^23.10.0"}
  flake8 = ">=4.0.1, <5.0.0"
  flakeheaven = "^3.3.0"
  isort = "^5.12.0"
  ruff = "^0.1.0"
  # flake8 plugins for stuff not yet on ruff.
  # See <https://github.com/astral-sh/ruff/issues/458>.
  pydoclint = "^0.3.4" # Replaces darglint, but is maintained & faster

[tool.poetry.group.test.dependencies]
  pytest = "^7.2.2"
  pytest-cov = "^4.1.0"
  pytest-mock = "^3.7.0"
  pytest-profiling = "^1.7.0"
  pytest-timeout = "^2.1.0"
  pytest-xdist = "^3.2.0"

[tool.black]
  line-length = 90

[tool.deode.toml_formatter]
  indentation = 2
  section_order_overrides = [
    "^general$",
    "general.*",
    "^tool.poetry$",
    "^tool.poetry.scripts$",
    "build-system",
    "tool.poetry.*",
  ]

[tool.flakeheaven]
  base = ".flakeheaven.toml"

[tool.isort]
  line_length = 90
  profile = "black"

[tool.pytest.ini_options]
  addopts = "-v --cov-report=term-missing --cov-report=term:skip-covered --cov-report=xml:.coverage.xml --cov=./"
  log_cli_level = "INFO"
  testpaths = ["tests/smoke", "tests/unit"]

[tool.ruff]
  # C901: Function is too complex. Ignoring this for now but will be removed later.
  ignore = ["C901", "RUF012"]
  line-length = 90
  select = ["S", "B", "A", "C4", "ERA", "G", "PT", "C90", "N", "RUF", "ARG", "BLE001"]

[tool.ruff.per-file-ignores]
  # S101: Use of `assert` detected
  "tests/**/*.py" = ["S101"]
